--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                   <input id="sign-up_user-login" type="text" class="form__input" required name="uname">
                 </div>
                 <div class="form__item">
-                  <label for="sign-up_user-pass" class="form__label text">Password</label>
-                  <input id="sign-up_user-pass" type="password" class="form__input" required name="psw">
+                  <label for="sign-up_user-password" class="form__label text">Password</label>
+                  <input id="sign-up_user-password" type="password" class="form__input" required name="psw">
                 </div>
                 <div class="form__item">
-                  <label for="userPasswordRepeated-sign-up" class="form__label text">Repeated Password</label>
-                  <input id="userPasswordRepeated-sign-up"  type="password" class="form__input" name="psw">
+                  <label for="sign-up_user-pass-repeated" class="form__label text">Repeated Password</label>
+                  <input id="sign-up_user-pass-repeated"  type="password" class="form__input" name="psw">
                 </div>
                 <button type="submit" class="form__btn btn" id="button-sign-up">Sign Up</button>
               </form>
